Working on: Make post body in the same way readable as Safari's reader view (Issue #6)

--- a/assets/scss/framework/design/typography/elements/figure/--with-background/figure--with-background.scss
+++ b/assets/scss/framework/design/typography/elements/figure/--with-background/figure--with-background.scss
@@ -1,4 +1,4 @@
 @mixin figure--with-background($padding: 0) {
-  @include background-pattern--horizontal-lines;
+  @include background-pattern--dotted;
   padding: $padding;
 }
