--- a/assets/scss/framework/design/typography/text-style/text-style.scss
+++ b/assets/scss/framework/design/typography/text-style/text-style.scss
@@ -52,23 +52,13 @@ $text-block-width: $lem * 33;
   // Post title large
   @if ($variant == 'post-title-large') {
     @include font(bold);
-    line-height: 1.1;
+    @include scale(large-1);
 
-    @include mobile {
-      @include scale(large-1);
-    }
-
-    @include tablet {
+    @include mobile-and-up {
       @include scale(large-2);
     }
 
-    @include laptop {
-      @include scale(large-3);
-    }
-
-    @include desktop {
-      @include scale(large-4);
-    }
+    line-height: 1.1;
   }
 
 
@@ -77,7 +67,7 @@ $text-block-width: $lem * 33;
     @include font(default);
 
     @include mobile-and-up {
-      @include scale(large-1);
+      // @include scale(large-1);
     }
   }
 
@@ -127,7 +117,7 @@ $text-block-width: $lem * 33;
   @if ($variant == 'body-text-post') {
     @include p;
     @include h1h6;
-    @include a--bold;
+    @include a;
     @include ol;
     @include ul--body-text;
     @include blockquote;
