--- a/assets/scss/theme/post-single/post-single.scss
+++ b/assets/scss/theme/post-single/post-single.scss
@@ -3,6 +3,9 @@
   flex-direction: column;
   align-items: center;
 
+  padding: $top $left;
+  @include border(normal, all);
+
   > * {
     width: 100%;
   }
